fix: z-index

--- a/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
@@ -32,6 +32,7 @@
     right: -40px;
     bottom: 40px;
     position: absolute;
+    z-index: var(--z-index-l);
 }
 
 .links {
